# ChangeLog for dev-python/twisted
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.160 2013/01/14 03:54:33 patrick Exp $

  02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -twisted-11.1.0-r1.ebuild.working-1:
  Remove accidentally committed file.

*twisted-11.1.0-r1 (02 Apr 2013)

  02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/twisted-2.1.0-echo-less.patch, +files/twisted-2.1.0-zsh-head.patch,
  +files/twisted-9.0.0-respect_TWISTED_DISABLE_WRITING_OF_PLUGIN_CACHE.patch,
  +twisted-11.1.0-r1.ebuild, +twisted-11.1.0-r1.ebuild.working-1,
  +files/twisted-12.0.0-fix-test-timeFormatting.patch,
  +files/twisted-12.1.0-remove-tests-conch-dependency.patch,
  +files/twistd.conf, +files/twistd.init, +metadata.xml:
  Use twisted-r1 eclass. -f

*twisted-12.3.0 (14 Jan 2013)

  14 Jan 2013; Patrick Lauer <patrick@gentoo.org> +twisted-12.3.0.ebuild:
  Bump

  08 Jan 2013; Mike Gilbert <floppym@gentoo.org> files/twistd.init:
  Remove bashism, #450806 by kensington.

  08 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-12.2.0.ebuild:
  Tighten python version dependency (spotted by Arfrever).

  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-10.2.0.ebuild,
  twisted-11.0.0.ebuild:
  Restrict pypy in twisted < 11.1.0 (bug #420653).

*twisted-12.2.0 (27 Sep 2012)

  27 Sep 2012; Marien Zwart <marienz@gentoo.org>
  +files/twisted-12.1.0-remove-tests-conch-dependency.patch,
  +twisted-12.2.0.ebuild:
  Bump to 12.2.0 (bug #423777) with some test-related ebuild improvements.

  08 May 2012; Alexis Ballier <aballier@gentoo.org> twisted-12.0.0.ebuild:
  keyword ~amd64-fbsd

  13 Apr 2012; Marien Zwart <marienz@gentoo.org>
  +files/twisted-12.0.0-fix-test-timeFormatting.patch, twisted-12.0.0.ebuild:
  Fix a test that fails in some timezones (bug #409329).

*twisted-12.0.0 (22 Mar 2012)
