@@ -1,1 +1,2 @@
 DIST TwistedCore-11.1.0.tar.bz2 1455613 SHA256 0041b5c38cd7c40043f64c4aaeb5fcc4631c229776c896cfa188fd2b567fd76d SHA512 437041b00a0ce85fc3658db136e6b782787aecb6e74c1bafd3e49e72aa0e2a5685ffc3fa0b65839be04c7b68e6e83b66d37c48460a33b8e1809625d9aab50ba9 WHIRLPOOL dca72cff3c0a55fba18442c168ea1327d41ee2ace51fdd044f6e967b17a052aae066401d84e9149aef4c80e7f38a259ecbf34ebd78d9fc60b94c63f267cada84
+DIST TwistedCore-12.3.0.tar.bz2 1480622 SHA256 343dd7372b05d4aa0805406bcbee7db40514b6bb48aa2840e0e56d88a8970900 SHA512 86e9bbd4b8b0b5f70b62757f9ce93fd03c2766b4cb9722028ec7863d1b9dd19e6d3771472a86f1373a8320a98f5081ac76400ac6bb25a950b6fc50fb241ebeb8 WHIRLPOOL 77cb88bd53a5c489ad8781ebef10987766dfd42d8ad3bcd599b9ba2bbc77cf41bee8507a29727cb6d88590d8cb2ac118b1eeb553c034107513502cf7ae62f6aa
