@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.160 2013/01/14 03:54:33 patrick Exp $
 
+*twisted-12.3.0-r1 (02 Apr 2013)
+
+  02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  +twisted-12.3.0-r1.ebuild:
+  Use twisted-r1 eclass.
+
   02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   -twisted-11.1.0-r1.ebuild.working-1:
   Remove accidentally committed file.
